# lfm

./: .gitignore  CLAUDE.md  README.md  RESUME.md  STATUS.md  design-practices.md  diagnose_v3.py  disentangle_metrics.py  example-corpus.txt  first-principles-proposal_v1.md  lingdiag.py  package-lock.json  probe_game.py  pyproject.toml  run_autotune.py
configs/: cloud_a100.yaml  cloud_runpod_a100.yaml  cloud_vastai_a100.yaml  cloud_vastai_phoneme.yaml  cloud_vastai_test.yaml  contrastive_dep_tree_v1.yaml  contrastive_dep_tree_v1_vast.yaml  contrastive_dep_tree_v2_vast.yaml  dep_tree_diffusion_local.yaml  dep_tree_diffusion_vast.yaml  dep_tree_diffusion_vast_hierarchical.yaml  dep_tree_diffusion_vast_invnoise.yaml  dep_tree_vae_v1.yaml  dep_tree_vae_v3.yaml  dep_tree_vae_vast.yaml  dialogue_dep_tree_local.yaml  dialogue_phase1.yaml  dialogue_v13_zreg_contrastive.yaml  dialogue_v15_ipa_contrastive.yaml  dialogue_v7_llm_pressure.yaml  dialogue_v7_phase1.yaml  dialogue_v7_phase1_vent.yaml  dialogue_v7_phase1_vent2.yaml  dialogue_v7_qwen_contrastive.yaml  dialogue_v7_qwen_roundtrip.yaml  dialogue_v7_qwen_targets.yaml  dialogue_v7_qwen_topo.yaml  dialogue_v8_phase1.yaml  dialogue_v8_qwen_contrastive.yaml  dialogue_v8_qwen_contrastive_vast.yaml  document_v7.yaml  expression_leaf_phase1.yaml  expression_leaf_phase2.yaml  expression_v7_phase1.yaml  generate_dialogue_corpus_v8.yaml  multiview_v7.yaml  p2g_bpe.yaml  p2g_seq2seq.yaml  p2g_v10.yaml  p2g_v11.yaml  (+59 more)
docs/: corpus-analysis.md  cross-lingual-bridging.md  data-guide.md  expression-game-progress.md  expression-system.md  first-principles-proposal.md  future-latent-navigation.md  grounded-reasoning.md  interpretability-thesis.md  lfm-vs-longcat.md  lfm-vs-lqm.md  ligo-multimodal-plan.md  ligo-plan.md  multilingual-vae-plan.md  ortho-vae-approach.md  perception-mediated-training.md  phoneme-alphabet-design.md  pretrained-decoder-approach.md  qwen-latent-targets.md  roadmap.md  spinlock-vq-vs-longcat.md  structural-analysis.md  synthlm-architecture.md  translation-guide.md  tree-structured-generation.md  v5-alien-corpus.md  why-language-first.md
scripts/: README.md  analyze_corpus_quality.py  analyze_phase1_statistics.py  build_english_constituents.py  build_multilingual_dep_corpus.py  build_multisent_corpus.py  build_p2g_bpe_pairs.py  build_p2g_morpheme_pairs.py  build_p2g_pairs.py  build_p2g_v15_bpe_context.py  build_p2g_v15_bpe_pairs.py  build_p2g_v15_pairs.py  build_semantic_cipher_clusters.py  build_sentence_corpus_smoke.py  build_synth_bigram.py  build_synth_clusters.py  build_synth_ngram.py  build_token_frequency.py  build_v12_english_ortho_dataset.py  build_v13_corpus.py  build_v14_sentences.py  build_v7_english_ipa_dataset.py  clean_constituents.py  clean_english_constituents.py  clean_qwen_store.py  cluster_embeddings.py  cluster_interp_consistency.py  compare_alphabets_empirical.py  compare_llm_pressure_interp.py  compare_parsers.py  convert_to_ipa.py  corpus_grammar_analysis.py  (+83 more)
(+422 files in other folders)
