[project]
name = "lfm"
version = "0.1.0"
description = "Language Faculty Model — a constraint-driven, compositional, morphosyntactic prior that enables structured communication without predefined semantics for GPU-based multi-agent systems."
authors = [
    {name = "dg", email = "dg@gelotto.io"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.0",
    "pydantic>=2.0",
    "numpy>=1.24",
]

[tool.poetry]
packages = [{include = "lfm", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
ruff = ">=0.4"

[tool.poetry.group.embeddings.dependencies]
sentence-transformers = ">=3.0"
scikit-learn = ">=1.3"

[tool.poetry.group.phonology.dependencies]
panphon = ">=0.20"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
