[project]
name = "lfm"
version = "0.1.0"
description = "Language Faculty Model — a constraint-driven, compositional, morphosyntactic prior that enables structured communication without predefined semantics for GPU-based multi-agent systems."
authors = [
    {name = "dg", email = "dg@gelotto.io"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.0",
    "pydantic>=2.0",
    "numpy>=1.24",
    "unidecode (>=1.4.0,<2.0.0)",
    "clean-text (>=0.7.1,<0.8.0)",
    "epitran (>=1.34.0,<2.0.0)",
    "g2p-en (>=2.1.0,<3.0.0)",
    "benepar (>=0.2.0,<0.3.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
]

[tool.poetry]
packages = [{include = "lfm", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
ruff = ">=0.4"

[tool.poetry.group.embeddings.dependencies]
sentence-transformers = ">=3.0"
scikit-learn = ">=1.3"

[tool.poetry.group.phonology.dependencies]
panphon = ">=0.20"

[tool.poetry.group.generator.dependencies]
sentencepiece = ">=0.2"

[tool.poetry.group.viz.dependencies]
matplotlib = ">=3.8"
seaborn = ">=0.13"

[tool.poetry.group.translator.dependencies]
transformers = ">=4.40"
peft = ">=0.10"

[tool.poetry.group.datasets.dependencies]
h5py = ">=3.10"
num2words = ">=0.5"
pyyaml = ">=6.0"
stanza = "^1.11.1"

[tool.poetry.group.publish.dependencies]
huggingface-hub = ">=0.20"

[tool.poetry.group.cloud.dependencies]
paramiko = ">=3.0"
requests = ">=2.28"

[tool.poetry.scripts]
lfm = "lfm.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:multiprocessing",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
